The navigation and branding have z-index issues. I'm at a loss.

--- a/less/homepage.less
+++ b/less/homepage.less
@@ -20,12 +20,19 @@
 		transition: height @mastheadtransitiontime, max-height @mastheadtransitiontime;
 
 		.main-navigation{
+			//background: pink;//TEMPORARY
+			z-index: 9;
 			height: 100%;
 			font-size: 1.1em;
 			transition: font-size @mastheadtransitiontime;
 		}
 
 		#site-logo{
+			//background: purple;//TEMPORARY
+			display: block;
+			width: 250px;
+			height: 150px;
+			z-index: 10;
 
 			img{
 				transition: width @mastheadtransitiontime;
